[gd_scene load_steps=39 format=2]

[ext_resource path="res://BabaGodotLib/Isometric/IsoRenderer/IsoRenderer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Combat/DebugPanel/DebugPanel.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Combat/HUD/ActionMenu/ActionMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Actors/Allies/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Combat/HUD/NinePatchRect/NinePatchRect.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Combat/Map/IsoMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Combat/Timeline/Timeline.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Combat/ActorTeam.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Gauge/HUD_Gauge.tscn" type="PackedScene" id=9]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateMachine.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Combat/HUD/HUD.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Overlook.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Combat/CombatLoop.gd" type="Script" id=13]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/PushdownAutomata/PushdownAutomata.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Combat/IA/IA.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Attack.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Skills.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Items.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/Wait.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/ActiveActorInfos.gd" type="Script" id=21]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBorder.png" type="Texture" id=22]
[ext_resource path="res://BabaGodotLib/Fonts/BoldCapsPixel24.tres" type="DynamicFont" id=23]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/OptionChoice.gd" type="Script" id=24]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBackGround.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/EnemyTurn/Decision.gd" type="Script" id=26]
[ext_resource path="res://Fonts/BoldCapitalPixel.tres" type="DynamicFont" id=27]
[ext_resource path="res://Resources/CombatEffectObject/Items/Potions/HealPotion.tres" type="Resource" id=28]
[ext_resource path="res://Scenes/Combat/HUD/ActionsLeft.gd" type="Script" id=29]
[ext_resource path="res://Resources/CombatEffectObject/Skills/Magic/Heal/Heal.tres" type="Resource" id=30]
[ext_resource path="res://Scenes/Combat/Animation.gd" type="Script" id=31]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/TargetChoice.gd" type="Script" id=32]
[ext_resource path="res://Scenes/Combat/DamageContainer.gd" type="Script" id=33]
[ext_resource path="res://Resources/Effect.gd" type="Script" id=34]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/DestinationChoice.gd" type="Script" id=35]
[ext_resource path="res://Scenes/Combat/TeamsContainer.gd" type="Script" id=36]
[ext_resource path="res://Scenes/Combat/CombatStates/CombatStateBase.gd" type="Script" id=38]
[ext_resource path="res://Scenes/Combat/CombatStates/TurnState/AlliesTurn/AllyTurn.gd" type="Script" id=41]

[sub_resource type="Resource" id=1]
script = ExtResource( 34 )
nb_hits = 1
damage = 5
damage_variance = 20.0
damage_type = 1
ailment_array = [  ]
ailment_mode = 1

[node name="Combat" type="Node2D"]
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="IA" type="Node" parent="."]
script = ExtResource( 16 )

[node name="Renderer" type="Node2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 290, 184 )
z_index = 999
current = true

[node name="CombatStatesMachine" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="PlayerTurn" type="Node2D" parent="CombatStatesMachine"]
script = ExtResource( 41 )

[node name="Overlook" type="Node" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 12 )

[node name="Move" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 15 )
reset_to_default = true

[node name="DestinationChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Move"]
script = ExtResource( 35 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Move"]
script = ExtResource( 31 )

[node name="Attack" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 17 )
reset_to_default = true

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Attack"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Attack"]
script = ExtResource( 31 )

[node name="Skill" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 18 )
reset_to_default = true

[node name="OptionChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 24 )

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Skill"]
script = ExtResource( 31 )

[node name="Item" type="Node2D" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 19 )

[node name="OptionChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 24 )

[node name="TargetChoice" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 32 )

[node name="Animation" type="Node" parent="CombatStatesMachine/PlayerTurn/Item"]
script = ExtResource( 31 )

[node name="Wait" type="Node" parent="CombatStatesMachine/PlayerTurn"]
script = ExtResource( 20 )

[node name="IATurn" type="Node2D" parent="CombatStatesMachine"]
script = ExtResource( 10 )
reset_to_default = true

[node name="Overlook" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 26 )

[node name="Move" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 38 )

[node name="Attack" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 38 )

[node name="Skill" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 38 )

[node name="Item" type="Node" parent="CombatStatesMachine/IATurn"]
script = ExtResource( 38 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="Interactives" parent="Map" index="2"]
z_index = 99

[node name="Cursor" parent="Map/Interactives" index="1"]
position = Vector2( 352, 200 )

[node name="ActorTeams" type="Node2D" parent="Map/Interactives" index="2"]
script = ExtResource( 36 )

[node name="Allies" type="Node2D" parent="Map/Interactives/ActorTeams"]
script = ExtResource( 8 )
team_side = 0
inventory = [ [ ExtResource( 28 ), 3 ] ]

[node name="Character" parent="Map/Interactives/ActorTeams/Allies" instance=ExtResource( 4 )]
position = Vector2( 320, 184 )
default_attack_effect = SubResource( 1 )
skills = [ ExtResource( 30 ) ]

[node name="Enemies" type="Node2D" parent="Map/Interactives/ActorTeams"]
script = ExtResource( 8 )

[node name="Obstacles" type="Node2D" parent="Map/Interactives" index="3"]
__meta__ = {
"_edit_lock_": true
}

[node name="Layer" parent="Map" index="3"]
tile_data = PoolIntArray( -327662, 63, 2, -327661, 63, 131072, -327660, 63, 131072, -327659, 63, 131072, -327658, 63, 131072, -327657, 63, 131076, -327655, 63, 131073, -131054, 63, 2, -131053, 63, 131072, -131052, 63, 131072, -131051, 63, 131072, -131050, 63, 131072, -131049, 63, 131076, -131047, 63, 131073, 65554, 63, 65539, 65555, 63, 131072, 65556, 63, 131072, 65557, 63, 131072, 65558, 63, 131072, 65559, 63, 131072, 65560, 63, 131072, 65561, 63, 65539, 131090, 63, 196608, 131097, 63, 196608, 196626, 63, 196608, 196633, 63, 196608, 262162, 63, 65539, 262163, 63, 131072, 262164, 63, 131072, 262165, 63, 131072, 262166, 63, 131072, 262167, 63, 131072, 262168, 63, 131072, 262169, 63, 65539, 393234, 63, 65539, 393235, 63, 131072, 393236, 63, 131072, 393237, 63, 131072, 393238, 63, 131072, 393239, 63, 131072, 393240, 63, 131072, 393241, 63, 65539, 458770, 63, 196608, 458777, 63, 196608, 524306, 63, 196608, 524313, 63, 196608, 589842, 63, 65539, 589843, 63, 131072, 589844, 63, 131072, 589845, 63, 131072, 589846, 63, 131072, 589847, 63, 131072, 589848, 63, 131072, 589849, 63, 65539, 720914, 63, 4, 720917, 63, 3, 720918, 63, 65539, 720919, 63, 131072, 720920, 63, 131072, 720921, 63, 65539, 786450, 63, 196608, 786453, 63, 0, 786454, 63, 65537, 786457, 63, 196608, 851986, 63, 196608, 851989, 63, 0, 851990, 63, 65537, 851993, 63, 196608, 917522, 63, 65539, 917523, 63, 131072, 917524, 63, 131072, 917525, 63, 65539, 917526, 63, 131075, 917529, 63, 131074 )

[node name="WestWall" parent="Map/Layer" index="0"]
tile_data = PoolIntArray( -327662, 66, 0, -327661, 66, 1, -327660, 66, 1, -327659, 66, 0, -327658, 66, 0, -327657, 66, 1, -327655, 66, 0, -131054, 66, 1, -131053, 66, 0, -131052, 66, 1, -131051, 66, 0, -131050, 66, 1, -131049, 66, 1, -131047, 66, 0, 65555, 66, 1, 65556, 66, 0, 65557, 66, 1, 65558, 66, 0, 65559, 66, 0, 65560, 66, 0, 262162, 66, 0, 262163, 66, 1, 262164, 66, 0, 262165, 66, 1, 262166, 66, 0, 262167, 66, 0, 262168, 66, 1, 262169, 66, 0, 393235, 66, 0, 393236, 66, 0, 393237, 66, 0, 393238, 66, 0, 393239, 66, 1, 393240, 66, 1, 589842, 66, 0, 589843, 66, 1, 589844, 66, 1, 589845, 66, 0, 589846, 66, 1, 589847, 66, 0, 589848, 66, 1, 589849, 66, 1, 720919, 66, 1, 720920, 66, 0, 917522, 66, 0, 917523, 66, 1, 917524, 66, 0, 917525, 66, 0, 917526, 66, 0, 917529, 66, 0 )

[node name="EastWall" parent="Map/Layer" index="1"]
z_index = -1
tile_data = PoolIntArray( -327657, 66, 3, -327655, 66, 2, -131049, 66, 3, -131047, 66, 2, 65561, 66, 2, 131090, 66, 3, 131097, 66, 3, 196626, 66, 2, 196633, 66, 3, 262169, 66, 2, 393241, 66, 3, 458770, 66, 3, 458777, 66, 2, 524306, 66, 2, 524313, 66, 2, 589849, 66, 3, 720914, 66, 3, 720921, 66, 3, 786450, 66, 3, 786454, 66, 3, 786457, 66, 2, 851986, 66, 3, 851990, 66, 3, 851993, 66, 2, 917526, 66, 2, 917529, 66, 2 )

[node name="DamageContainer" type="Node2D" parent="."]
script = ExtResource( 33 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 11 )

[node name="ActorInfos" type="Control" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = -4.0
margin_right = -1.0
margin_bottom = 60.0
mouse_filter = 2
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitContainer" type="Position2D" parent="HUD/ActorInfos"]
position = Vector2( 146.092, 44.9053 )
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="Sprite" parent="HUD/ActorInfos/PortraitContainer"]
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="HUD/ActorInfos/PortraitContainer"]
modulate = Color( 0.286275, 0.427451, 0.435294, 1 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portrait" type="Sprite" parent="HUD/ActorInfos/PortraitContainer"]
__meta__ = {
"_edit_lock_": true
}

[node name="ActorData" type="Control" parent="HUD/ActorInfos"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Gauges" type="VBoxContainer" parent="HUD/ActorInfos/ActorData"]
margin_left = 1.0
margin_top = 13.0
margin_right = 102.0
margin_bottom = 70.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" parent="HUD/ActorInfos/ActorData/Gauges" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 12.0
gauge_color = Color( 1, 0, 0, 1 )
feedback_gauge_color = Color( 0.392157, 0, 0, 1 )
shake_feedback_on = true

[node name="Label" type="Label" parent="HUD/ActorInfos/ActorData/Gauges/HP"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 23 )
text = "HP"

[node name="MP" parent="HUD/ActorInfos/ActorData/Gauges" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 101.0
margin_bottom = 28.0
gauge_color = Color( 0, 0, 1, 1 )
feedback_gauge_color = Color( 0, 0, 0.364706, 1 )

[node name="Label" type="Label" parent="HUD/ActorInfos/ActorData/Gauges/MP"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 23 )
text = "MP"

[node name="ActionsLeft" type="HBoxContainer" parent="HUD/ActorInfos/ActorData"]
anchor_left = 0.304
anchor_top = 0.734
anchor_right = 0.533
anchor_bottom = 1.0
margin_left = 34.064
margin_top = -1.976
margin_right = 33.928
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = -24
script = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Altitude" type="Label" parent="HUD/ActorInfos/ActorData"]
anchor_left = -0.364
anchor_top = 0.219
anchor_right = -0.13
anchor_bottom = 0.609
margin_left = -0.0240021
margin_top = -0.0160007
margin_right = 1.616
margin_bottom = 0.0239983
custom_fonts/font = ExtResource( 27 )
text = "Alt:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/ActorInfos"]

[node name="Timeline" parent="HUD" instance=ExtResource( 7 )]

[node name="ActionMenu" parent="HUD" instance=ExtResource( 3 )]
margin_left = 566.0
margin_top = 80.0
margin_right = -4.0
margin_bottom = -181.0
rect_min_size = Vector2( 70, 99 )
description_window_path = "res://Scenes/UI/TRPG_DescritpionWindow.tscn"
menu_option_scene_path = "res://BabaGodotLib/UI/LineContainer/OptionLineContainer.tscn"
option_v_separation = -4
column_container_path = "ResizableWindow/MarginContainer/HBoxContainer"
max_lines = 10
max_columns = 1
window_texture = ExtResource( 5 )

[node name="DebugPanel" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -139.0
margin_right = 119.0
margin_bottom = 18.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimelineState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_right = 119.0
margin_bottom = 14.0
text = "Timeline State: "
__meta__ = {
"_edit_lock_": true
}

[node name="TurnType" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 119.0
margin_bottom = 32.0
text = "TurnType:"
__meta__ = {
"_edit_lock_": true
}

[node name="CombatState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 119.0
margin_bottom = 50.0
text = "CombatState:"
__meta__ = {
"_edit_lock_": true
}

[node name="CombatSubState" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 54.0
margin_right = 119.0
margin_bottom = 68.0
text = "Combat SubState:"
__meta__ = {
"_edit_lock_": true
}

[node name="ActiveActor" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 72.0
margin_right = 119.0
margin_bottom = 86.0
text = "Active Actor:"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActiveActorPos" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 119.0
margin_bottom = 104.0
text = "Active Actor's Pos:"
__meta__ = {
"_edit_lock_": true
}

[node name="CursorMaxZ" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 108.0
margin_right = 119.0
margin_bottom = 122.0
text = "Cursor max_z:"
__meta__ = {
"_edit_lock_": true
}

[node name="CursorPos" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 126.0
margin_right = 119.0
margin_bottom = 157.0
text = "Cursor Pos:
"
__meta__ = {
"_edit_lock_": true
}

[editable path="Map"]
[editable path="Map/Layer"]
